--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# /api-docs endpoint custom path
+springdoc.swagger-ui.path=/swagger.html
 
+# Disabling the /v3/api-docs endpoint
+springdoc.api-docs.enabled=true
+
+#H2 settings
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
