--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,20 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 	implementation 'javax.servlet:javax.servlet-api:4.0.1'
 	implementation 'com.google.inject:guice:5.1.0'
+	//swagger
+	// exclude swagger annotation and use newer version due conflicts with avro serializer
+	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0"){
+		exclude group: "io.swagger.core.v3", module:"swagger-annotations"
+	}
+	// https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations
+	implementation 'io.swagger.core.v3:swagger-annotations:2.2.15'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'com.h2database:h2'
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.2.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.2.0'
 
 
 	compileOnly 'org.projectlombok:lombok:1.18.30'
